---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "var v : int const _ : v .. 2 := 'c'"
---
"v"@(FileId(1), 4..5) [ConstVar(Var, No)]: int
"_"@(FileId(1), 18..19) [ConstVar(Const, No)]: range of `int` (Unevaluated(PackageId(0), BodyId(0)) .. Expr(Unevaluated(PackageId(0), BodyId(1)), No))
"<root>"@(dummy) [Module(No)]: <error>

error at (FileId(1), 22..23): cannot compute `v` at compile-time
| error for (FileId(1), 22..23): `v` is a reference to a variable, not a constant
| note for (FileId(1), 4..5): `v` declared here
error at (FileId(1), 32..35): mismatched types
| note for (FileId(1), 32..35): this is of type `char`
| note for (FileId(1), 22..28): this is of type `{dynamic} .. 2`
| info: `char` is not assignable into `{dynamic} .. 2`
